<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/noir"
    tools:context=".controller.Game">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/retour"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="30"
            android:layout_gravity="center"
            android:contentDescription="@string/description_fleche_inactif"
            android:src="@drawable/fleche_retour" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="30"
            android:layout_gravity="center"
            android:contentDescription="@string/description_nom_appli"
            android:src="@drawable/nom_appli" />
        <ImageView
            android:id="@+id/parametres"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="30"
            android:layout_gravity="center"
            android:contentDescription="description_parametres"
            android:src="@drawable/engrenages" />
        
        
    </LinearLayout>
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:contentDescription="@string/description_logo"
        android:src="@drawable/logo" />
    
    <Button 
            android:id="@+id/jouer"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="25"
            android:background="@drawable/default_bouton"
            style="@style/DefaultText"
            android:text="@string/jouer"/>
    
    <Button 
            android:id="@+id/defi"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="25"
            android:background="@drawable/default_bouton"
            style="@style/DefaultText"
            android:text="@string/defi"/>

    <Button 
            android:id="@+id/reprendre"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="25"
            android:background="@drawable/default_bouton"
            style="@style/DefaultText"
            android:text="@string/reprendre"/>
    
    <Button 
            android:id="@+id/deconnexion"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="25"
            android:background="@drawable/default_bouton"
            style="@style/DefaultTextPetit"
            android:text="@string/deconnexion"/>

</LinearLayout>