<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/noir"
    tools:context=".controller.ConnexionActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/description_logo"
        android:src="@drawable/logo" />
    
    <TextView
              android:id="@+id/userID"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingTop="10dp"
              android:paddingBottom="10dp"
              style="@style/DefaultText"
              android:gravity="center"
              android:text=""/>

    <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/DefaultHint"
              android:gravity="center"
              android:paddingTop="10dp"
              android:text="@string/password"/>

    <EditText
              android:id="@+id/get_password"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/DefaultHint"
              android:gravity="center"
              android:inputType="textPassword"
              android:hint="@string/get_password"/>

    <Button
        android:id="@+id/connexion"
        style="@style/DefaultText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/default_bouton"
        android:text="@string/connexion" />

    <TextView
              android:layout_width="match_parent"
              android:layout_height="25dp"
              android:text=""/>

    <Button
        android:id="@+id/plus_tard"
        style="@style/DefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/default_bouton"
        android:text="@string/faire_plus_tard" />
</LinearLayout>