<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.MainActivity">

    <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"  
              android:paddingTop="75dp"
              android:textSize="33sp" 
              android:text="@string/userID"/>

    <EditText
              android:id="@+id/userID"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:inputType="text"
              android:textSize="30sp"
              android:hint="@string/userID"/>

    <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:paddingTop="10dp"
              android:textSize="33sp" 
              android:text="@string/password"/>

    <EditText
              android:id="@+id/password"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:inputType="textPassword"
              android:textSize="30sp"
              android:hint="@string/password"/>

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:textSize="30sp"
        android:visibility="invisible" />
    <Button
            android:id="@+id/connexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:text="@string/connexion"/>
    <TextView
              android:id="@+id/nouveauCompte"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:paddingTop="10dp"
              android:textSize="28sp" 
              android:text="@string/nouveauCompte"/>
</LinearLayout>